# api-comparison

./: .gitignore  Makefile  locustfile.py  profile.txt  pyproject.toml
comparison/: constants.py  fraud.py  logging.py  main_fastapi.py  main_flask.py  schemas.py  sentiment.py  utils.py
data/: dummy_fraud_data.csv  trained_lgbm_model.txt
results/: fastapi_stats.csv  fastapi_stats_history.csv  flask_failures.csv  flask_stats.csv  flask_stats_history.csv
tests/: test_fastapi.py  test_flask.py
workspace/: benchmark.py  generate_fraud_data.py  load_model.py  load_test.ipynb  test_model.ipynb  train_lgbm.py
workspace/results/: flask_100_users_failures.csv  flask_100_users_stats.csv  flask_100_users_stats_history.csv
