[tool.poetry]
name = "comparison"
version = "0.1.0"
description = ""
authors = ["Justin <justinluong1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
flask = "^3.0.2"
pydantic = "^2.6.3"
lightgbm = "^4.3.0"
torch = "^2.2.1"
pandas = "^2.2.1"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"
uvicorn = "^0.27.1"
gunicorn = "^21.2.0"
matplotlib = "^3.8.3"
transformers = "^4.38.2"



[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
mypy = "^1.8.0"
anyio = "^4.3.0"
httpx = "^0.27.0"
locust = "^2.24.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
